# logtel

./: README.md  influxdb_log.json  log2influxdb.py  pyproject.toml  requirements.txt  single_value.json
src/: example.json  influxdbget.py  log2influxdb.py  multiple_value.json
